# omni-me

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  PROJECT_PROCESS.md  SOURCE_REAUTH_DESIGN.md  SUBPROCESS_SOURCE_CONTRACT.md  UI_WORKFLOW.md  UI_design.md  android-test-checklist.md  architecture.md  docker-compose.yml  project.md  research.md  tasks.md  ui-checklist.md
.archive/poc/ledger-parse/: Cargo.toml
.archive/poc/ledger-parse/.cargo/: config.toml
.archive/poc/ledger-parse/src/: main.rs
.archive/poc/surrealdb-embedded/: Cargo.toml
.archive/poc/surrealdb-embedded/src/: main.rs
.archive/poc/tauri-dioxus/: package-lock.json
.archive/poc/tauri-dioxus/frontend/src/: main.rs
.archive/poc/tauri-dioxus/src-tauri/: Cargo.toml  tauri.conf.json
.archive/ui_dev_gemini/: package.json
.github/workflows/: ci.yml
.log/: 2026-03-02-session-01-initiation.txt
.playwright-mcp/: page-2026-04-17T02-43-23-922Z.yml  page-2026-04-17T02-44-37-797Z.yml  page-2026-04-17T02-44-49-630Z.yml  page-2026-04-17T02-46-58-631Z.yml  page-2026-04-17T02-47-30-424Z.yml  page-2026-04-17T02-47-39-905Z.yml  page-2026-04-17T02-48-00-172Z.yml  page-2026-04-17T02-48-23-226Z.yml  page-2026-04-17T02-48-43-805Z.yml  page-2026-04-17T02-48-53-192Z.yml  page-2026-04-17T02-50-57-542Z.yml  page-2026-04-17T02-51-17-099Z.yml  page-2026-04-17T02-51-26-563Z.yml  page-2026-04-17T02-51-46-667Z.yml  page-2026-04-17T02-51-59-530Z.yml  page-2026-04-17T02-52-21-851Z.yml  page-2026-04-17T02-52-42-412Z.yml  page-2026-04-17T02-53-09-018Z.yml  page-2026-04-17T02-53-31-443Z.yml  page-2026-04-17T02-53-42-811Z.yml
core/: Cargo.toml
core/src/: accounts.rs  auto_close.rs  auto_import_scheduler.rs  balances.rs  budget.rs  credentials.rs  dashboard.rs  fx.rs  import.rs  journal_file.rs  journal_import.rs  ledger.rs  lib.rs  reconciliation.rs  recurring.rs  routines.rs  statement_csv.rs
core/src/auto_import/: config.rs  csv.rs  imap.rs  imap_real.rs  imap_source.rs  mime.rs  mod.rs  receipts.rs  rest.rs  sc_ngn.rs  setup.rs  subprocess.rs  wealthsimple.rs  wise.rs
core/src/db/: error.rs  mod.rs  queries.rs
core/src/events/: auto_import_projection.rs  budget_projection.rs  mod.rs  notes_projection.rs  projection.rs  routines_projection.rs  store.rs  types.rs
core/src/extraction/: event_mapper.rs  gemini.rs  mod.rs  null.rs  openai_compat.rs  verify.rs
core/src/llm/: client.rs  gemini.rs  mod.rs  openai_compat.rs  pipeline.rs  prompts.rs  tools.rs
core/src/preprocess/: mod.rs
core/src/query/: ast.rs  eval.rs  mod.rs  parser.rs
core/src/sync/: accelerator.rs  buffer.rs  client.rs  mod.rs  network.rs  pusher.rs  retry.rs  status.rs
core/tests/: README.md  extraction_integration.rs  journal_import_paisa.rs
core/tests/fixtures/extraction/: README.md
plans/: 2026-05-15-cycle-3-replan.md
poc/tauri-dioxus/: package.json
poc/tauri-dioxus/assets/js/: editor.js
poc/tauri-dioxus/frontend/: Cargo.toml
poc/tauri-dioxus/src-tauri/capabilities/: default.json
poc/tauri-dioxus/src-tauri/src/: lib.rs  main.rs
scripts/: port_env_to_credentials.py  wealthsimple_driver_example.py
secrets/: credentials.toml.example
server/: Cargo.toml  Dockerfile
server/src/: lib.rs  main.rs
server/src/routes/: auto_import.rs  blobs.rs  documents.rs  llm.rs  mod.rs  notes.rs  sync.rs
server/tests/: sync_client_integration.rs  sync_integration.rs  sync_phase2_integration.rs  updates_integration.rs
server/tests/common/: mod.rs
tauri-app/: BUILD.md  package-lock.json  package.json
tauri-app/assets/js/: editor.bundle.js  editor.js
tauri-app/frontend/: Cargo.toml  Dioxus.toml  input.css  tailwind.config.js
tauri-app/frontend/assets/: tailwind.css
tauri-app/frontend/src/: autosave.rs  bridge.rs  continuity.rs  duration.rs  journal_template.rs  main.rs  reorder.rs  timer.rs  types.rs  user_date.rs
tauri-app/frontend/src/components/: account_input.rs  editor.rs  mod.rs  nav.rs  sync_status.rs
tauri-app/frontend/src/pages/: finances.rs  import_export.rs  journal.rs  mod.rs  notes.rs  routines.rs  settings.rs
tauri-app/scripts/: android-build.sh  desktop-build.sh
tauri-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
tauri-app/src-tauri/android-overrides/: AndroidManifest.xml
tauri-app/src-tauri/android-overrides/java/com/omni_me/app/: InsetBridge.kt  MainActivity.kt
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/src/: auto_close_scheduler.rs  lib.rs  main.rs  recurring_scanner.rs
tauri-app/src-tauri/src/commands/: attachments.rs  auto_import.rs  budget.rs  extract.rs  import.rs  journal_import.rs  llm.rs  mod.rs  notes.rs  routines.rs  settings.rs  share_intent.rs  shared.rs  sync.rs  timezone.rs  update.rs  workspace.rs
ui_dev/: GEMINI.md  debug_editor.js  package-lock.json  take_screenshot.js
