[workspace]
members = ["core", "server", "tauri-app/src-tauri"]
exclude = ["tauri-app/frontend"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
