[package]
name = "omni-me-core"
version.workspace = true
edition.workspace = true

[dependencies]
surrealdb = { version = "3", features = ["kv-surrealkv"] }
tokio = { workspace = true }
thiserror = "2"
serde = { workspace = true }
serde_json = { workspace = true }
ulid = { version = "1", features = ["serde"] }
chrono = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
regex = { version = "1", default-features = false, features = ["std", "perf"] }
async-trait = { workspace = true }


[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
