[package]
name = "omni-me-core"
version.workspace = true
edition.workspace = true

[dependencies]
surrealdb = { version = "3", features = ["kv-surrealkv"] }
tokio = { workspace = true }
thiserror = "2"
serde = { workspace = true }
serde_json = { workspace = true }
serde-saphyr = "0.0"
ulid = { version = "1", features = ["serde"] }
chrono = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
regex = { version = "1", default-features = false, features = ["std", "perf"] }
async-trait = { workspace = true }
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
rust_decimal = { version = "1", default-features = false, features = ["serde-with-str"] }
serde_with = { version = "3", default-features = false, features = ["macros", "std"] }
ledger-parser = "6"
ledger-utils = "0.6"
base64 = "0.22"
toml = "0.8"
tracing = "0.1"


[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
tokio = { workspace = true, features = ["test-util"] }
