[package]
name = "omni-me-core"
version.workspace = true
edition.workspace = true

[features]
default = []
# Server-only: pulls in the IMAP + native-tls deps and exposes the
# `auto_import` + `auto_import_scheduler` modules. Tauri clients build with
# default features off — keeps openssl-sys out of the Android dep tree
# (per [[feedback-llm-server-side]] and [[project-auto-import-host]] the
# scheduler lives in `omni-me-server`, not in the client).
auto-import = ["dep:imap", "dep:native-tls"]

[dependencies]
surrealdb = { version = "3", features = ["kv-surrealkv"] }
tokio = { workspace = true }
thiserror = "2"
serde = { workspace = true }
serde_json = { workspace = true }
serde-saphyr = "0.0"
ulid = { version = "1", features = ["serde"] }
chrono = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
regex = { version = "1", default-features = false, features = ["std", "perf"] }
async-trait = { workspace = true }
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
rust_decimal = { version = "1", default-features = false, features = ["serde-with-str"] }
serde_with = { version = "3", default-features = false, features = ["macros", "std"] }
ledger-parser = "6"
ledger-utils = "0.6"
glob = "0.3"
base64 = "0.22"
toml = "0.8"
tracing = "0.1"
mail-parser = "0.10"
tempfile = "3"
imap = { version = "2", optional = true }
native-tls = { version = "0.2", optional = true }


[dev-dependencies]
wiremock = "0.6"
tokio = { workspace = true, features = ["test-util"] }
