[package]
name = "omni-me-server"
version.workspace = true
edition.workspace = true

[dependencies]
omni-me-core = { path = "../core" }
axum = "0.8"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ulid = { version = "1", features = ["serde"] }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", features = ["json"] }
