[package]
name = "omni-me-app"
version.workspace = true
edition.workspace = true

[lib]
name = "omni_me_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
omni-me-core = { path = "../../core" }
tauri = { version = "2", features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
chrono-tz = "0.10"
ulid = { version = "1", features = ["serde"] }
rust_decimal = { version = "1", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.10"
semver = "1"
iana-time-zone = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Desktop self-update. Mobile (android/ios) is unsupported by the plugin and
# uses the custom OTA in `commands::update`, so gate the dep to desktop targets.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3"
