[package]
name = "tauri-dioxus-poc"
version = "0.1.0"
edition = "2024"

[lib]
name = "tauri_dioxus_poc"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
